--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<div class="ribbon right red">
-	  <a href="https://github.com/jinzaifeng/resume">Fork me on GitHub</a>
+	  <a href="https://github.com/yangzijiao/resume.git">Fork me on GitHub</a>
 	</div>
   {% include head.html %}
 
